# my-clock

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.css  index.html  package.json  tailwind.config.js
docs/: entry.js  flipper.js  index.css  index.html  my_clock-5016693fc1782df6.js  my_clock-5016693fc1782df6_bg.wasm  my_clock-938d0548f61ba2fb.js  my_clock-938d0548f61ba2fb_bg.wasm  my_clock-c19cda208656041.js  my_clock-c19cda208656041_bg.wasm  my_clock-da5711b55fb8ca43.js  my_clock-da5711b55fb8ca43_bg.wasm  my_clock.d.ts  my_clock.js  my_clock_bg.wasm  my_clock_bg.wasm.d.ts  package.json  style.css
src/: flipper.rs  lib.rs  main.rs
src-tauri/: tauri.conf.json
src/components/: btns.rs  clock.rs  flipper.rs  image.rs  mod.rs
src/util/: flipper.rs  mod.rs
