[package]
name = "my_clock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["wasmbind"] }
sycamore = "0.8.0-beta.6"
wasm-bindgen = "0.2"
tracing = "0.1"
tracing-wasm = "0.2"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = ["Window"]
